--- a/recycleViewDemo/app/src/main/res/layout/activity_main.xml
+++ b/recycleViewDemo/app/src/main/res/layout/activity_main.xml
@@ -7,11 +7,10 @@
     android:orientation="vertical">
 
     <Button
-        android:id="@+id/btn1"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:onClick="add"
-        android:text="add" />
+        android:onClick="addItem"
+        android:text="addItem" />
 
     <android.support.v7.widget.RecyclerView
         android:id="@+id/recyclerview"
